Working on mobile links to correct spot

--- a/media.css
+++ b/media.css
@@ -53,9 +53,9 @@
   #contact-right {
     height: auto;
   }
-}
 
-@media only screen and (max-width: 700px) {
-  #section-1::after {
-  }
-}
+/* facilitates anchor linking to correct visual loc */
+  /* .anchor {
+    padding-top: 40px;
+    margin-top: -40px;
+  } */
